加入a和b页面跳转

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<title>git</title>
 	</head>
 	<body>
+		<h1>我是index页面</h1>
 		<p>welcome to got</p>
 		<h1>应该是git</h1>
+		<a href="./b.html">go to B</a>
+		<a href="./a.html">go to A</a>
 	</body>
 </html>
