--- a/zuoyeyi.html
+++ b/zuoyeyi.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>给阿姨来一杯卡布奇诺</title>
 </head>
-<body style="padding: 0;margin: 0;">
+<body style="padding: 0;margin: 0;width: 50%;margin-left: 25%;">
     <div class="top" style="width: 100%;height: 100px;;display: flex;justify-content: center;align-items: center; background-color: #F6F6F6;">
         <img src="./tubiao.jpg" alt="图标" style="width: 50px;height: 50px;">
         <h1>来一杯咖啡吗？</h1>
     </div>
     <div class="zhong" style="width: 100%;height: auto;display: flex;">
-        <div class="zuo" style="width: 20%;height:610px;background-color: #F1F5FE;">
+        <div class="zuo" style="width: 30%;height:610px;background-color: #F1F5FE;">
             <ul style="margin-left: 5%;">
                 <li><a href="#">拿铁</a></li>
                 <li><a href="#">卡布奇诺</a></li>
@@ -21,10 +21,11 @@
                 <li>焦糖玛奇朵</li>
             </ul>
         </div>
-        <div class="you" style="width: 30%;margin: 10px;">
+        <div class="you" style="width: 70%;margin-left: 10px;margin-top: 10px;">
             <img src="./kafei.jpg" alt="咖啡" style="width: 100%;height: 50%;">
             <h2>拿铁</h2>
-            <p style="line-height: 25px;font-family: 宋体;font-size: 14px;">“拿铁"是意大利文"Latte”的音译，拿铁咖啡拿铁咖啡(6张)
+            <p style="line-height: 25px;font-family: 宋体;font-size: 14px;">
+                “拿铁"是意大利文"Latte”的音译，拿铁咖啡拿铁咖啡(6张)
                 拿铁咖啡(CoffeeLatte)是花式咖啡的一种,是咖啡与牛奶交融
                 的极至之作。意式拿铁咖啡为纯牛奶加咖啡，美式拿铁则将
                 部分牛奶替换成奶泡,本地的拿铁多为此种。那句著名
@@ -34,8 +35,8 @@
             </p>
         </div>
     </div>
-    <div class="wei" style="width: 100%;height: 50px;background-color: #030B4F;bottom: 0;position: fixed;display: flex;justify-content: center;align-items: center;">
-        <p3 style="color: white;font-size: 16px;">版权所有@极客大叔</p3>
+    <div class="wei" style="width: 50%;height: 50px;background-color: #030B4F;bottom: 0;position: fixed;display: flex;justify-content: center;align-items: center;">
+        <p3 style="color: white;font-size: 16px;">版权所有&copy;极客大叔</p3>
     </div>
 </body>
 </html>
