--- a/zuoyesan.html
+++ b/zuoyesan.html
@@ -12,22 +12,42 @@
             width: 80%;
             margin-left: 10%;
         }
+        .top{
+            height: 50px;
+            background-color: #FF4C4F;
+        }
+        .top p{
+            float: left;
+            margin-left: 150px;
+            margin-top: 10px;
+            color: #FEF0EF;
+        }
+        .top a{
+            float: right;
+            margin-right: 10px;
+            margin-top: 10px;
+            color: #FEF0EF;
+        }
         h1{
+            width: 160px;
+            height: 80px;
             text-align: center;
             margin-top: 30px;
+            margin-left: 45%;
+            border-bottom: 4px solid black;
         }
         .xhddy,.xhds{
             display: flex;
         }
         .dianying,.shu{
-            width: 20%;
+            width: 25%;
             height: 400px;
             margin: 20px;
             background-color: #FEF0EF;
             border: 1px solid red;
         }
         .dianying:hover,.shu:hover{
-            margin-top: -5px;
+            margin-top: 10px;
         }
         img {
             width: 100%;
@@ -35,7 +55,7 @@
             padding: 2%;
             box-sizing: border-box;
         }
-        p{
+        .dianying p,.shu p{
             text-align: center;
         }
         .jieshao{
@@ -71,6 +91,12 @@
     </style>
 </head>
 <body>
+    <div class="top">
+        <p>极客大叔的爱好</p>
+        <a href="#" style="margin-right: 150px;">逛一圈</a>
+        <a href="#">喜欢的书</a>
+        <a href="#">喜欢的电影</a>
+    </div>
     <h1>喜欢的电影</h1>
     <div class="xhddy">
         <div class="dianying">
