修改了弹幕墙的大小和添加了练习文件

--- a/danmuqiang.html
+++ b/danmuqiang.html
@@ -11,6 +11,8 @@
         .danmuqiang{
             position: relative;
             height: 600px;
+            width: 80%;
+            margin: 0 auto;
             font-size: 30px;
             background-color: pink;
             overflow: hidden;
