--- a/danmuqiang.html
+++ b/danmuqiang.html
@@ -44,6 +44,11 @@
             background-color: #666666;
             box-shadow: green 0 0 10px 1px;
         }
+        #tmd{
+            position: absolute;
+            top: 650px;
+            right: 350px;
+        }
     </style>
 </head>
 
@@ -51,10 +56,11 @@
     <div class="danmuqiang">
     </div>
     <div class="caozuo">
-            <input id="srk" type="text" name="srk" placeholder="输入弹幕">
+            <input id="srk" type="text" name="srk" placeholder="输入弹幕"> 
             <button id="fasong">发送弹幕</button>
             <button id="qingkong">清空弹幕</button>
     </div>
+    <input type="text" id="tmd" name="tmd" placeholder="输入透明度">
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script> 
@@ -63,17 +69,23 @@
         var showscreen = $(".danmuqiang"); //定义弹幕           
         var showHeight = showscreen.height();     
         var showWidth = showscreen.width();
-
+        var tmd;
 
         //点击发送弹幕按钮
         $("#fasong").click(function(){
-            var danmutext = $("#srk").val();   
+            var danmutext = $("#srk").val();  
             if(danmutext == ''){
                 return;
             } else{
                 // $("#srk").val("");                                                      
+            };
+
+            var danmutmd = $('#tmd').val(); 
+            if(danmutmd == '' || danmutmd<0 || danmutmd >1){
+                tmd = 1;
+            }else{
+                tmd = $('#tmd').val();
             }
-           
             var textObj = $("<p>"+danmutext+"</p>");
             showscreen.append(textObj);
             moveObj(textObj);                       
@@ -95,6 +107,7 @@
                 display: "inline",
                 position:"absolute",
                 width:showWidth,
+                opacity:tmd,
             });
 
             var begin = showWidth;   //一开始的起点
