--- a/danmuqiang.html
+++ b/danmuqiang.html
@@ -61,7 +61,7 @@
     </div>
     <input type="text" id="tmd" name="tmd" placeholder="输入透明度">
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js'></script>
     <script> 
 
         $(function(){
