--- a/shouye.html
+++ b/shouye.html
@@ -5,10 +5,19 @@
     <title>海贼王首页</title>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .app{
+        width:100%;
+    }
+</style>
 </head>
 <body>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 500px;height: 400px;">
+<div class="app">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="width: 100%;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -16,13 +25,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 500px;height: 400px;">
+            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
           <div class="carousel-item">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 500px;height: 400px;">
+            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
           <div class="carousel-item">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 500px;height: 400px;">
+            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -33,7 +42,20 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
+    <div class="neirong">
+        <p>服务范围</p>
+        <div class="fwfw">
+            <div class="fwnr">
+                
+            </div>
+            <div class="fwnr"></div>
+            <div class="fwnr"></div>
+            <div class="fwnr"></div>
+        </div>
+    </div>
+</div>
+    
 
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"  crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
