企业站第二次添加

--- a/xinwen.html
+++ b/xinwen.html
@@ -171,80 +171,15 @@
     <div class="neirong">
         <div class="xinwen">
             <div class="xwnr">
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-                <div class="yi">
-                    <img src="./dianying.jpg" alt="">
-                    <div class="yiyou">
-                        <h5>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h5>
-                        <span>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</span>
-                        <p>哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-                    </div>
-                </div>
-
             </div>
             <ul class="pagination">
-                <li><a href="#">&laquo;</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&raquo;</a></li>
+                <li><a onclick="jian()">&laquo;</a></li>
+                <li><a onclick="page(1)">1</a></li>
+                <li><a onclick="page(2)">2</a></li>
+                <li><a onclick="page(3)">3</a></li>
+                <li><a onclick="page(4)">4</a></li>
+                <li><a onclick="page(5)">5</a></li>
+                <li><a onclick="jia()">&raquo;</a></li>
             </ul>         
         </div> 
     </div>
@@ -272,11 +207,54 @@
       </div>
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"  crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script>
-          $(".yi").click(function(){
-            window.location.href="xiangqing.html";                    
+        
+        var m = 1;
+        var nn;
+        page(m);
+        function page(n){
+             nn = n;
+            $(".xwnr").empty();
+            axios.get("https://lingqule.papamk.com/wp-json/w2w/v1/products?page="+nn).then(function(res){
+        $(function(){
+            for(var i=0;i<res.data.length;i++){    
+                var p = $(`
+                <div class="yi">
+                    <img src="${res.data[i].images[0].src}" alt="">                   
+                    <div class="yiyou">
+                        <h5>${res.data[i].id}</h5>
+                        <span>${res.data[i].name}</span>
+                        <p>${res.data[i].date_created}</p>
+                    </div>
+                </div>`);
+                $('.xwnr').append(p);    
+                p.attr('id',res.data[i].id);                        
+            };
+            $(".yi").click(function(){
+            window.location.href = `xiangqing.html?id=${$(this).attr('id')}`;                    
         });
+        })
+        })
+        }
+        function jian(){                                                                 
+                if(nn>1){ 
+                    nn--;
+                page(nn);
+                }else{
+                    return;
+                }                                     
+            };
+            function jia(){                                                                 
+                if(nn<5){
+                    nn++; 
+               page(nn);
+                }else{
+                    return;
+                }                                   
+            };
+
       </script>
 </body>
 </html>
