--- a/xiangqing.html
+++ b/xiangqing.html
@@ -49,11 +49,11 @@
     }
     .nrxq img{
         width: 500px;
-        height: 800px;
+        height: 600px;
     }
     .nrxq p{
         margin-top: 10px;
-        text-align: left;
+        text-align: center;
     }
 
     .foot{
@@ -120,9 +120,6 @@
     </div>
     <div class="neirong">
         <div class="nrxq">
-            <img src="./dianying.jpg" alt="">
-            <p>水水水水水水水水水水水水水撒大顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啵啵啵啵啵啵啵啵啵啵啵啵啵啵啵哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
-            <p>水水水水水水水水水水水水水撒大顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啵啵啵啵啵啵啵啵啵啵啵啵啵啵啵哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇哇</p>
         </div>
     </div>
     <div class="foot">
@@ -150,5 +147,17 @@
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"  crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+      <script>
+          axios.get(`https://lingqule.papamk.com/wp-json/w2w/v1/products/${window.location.search.split('=')[1]}`).then(function(res){
+              $(function(){               
+                var p = $(`
+                <img src="${res.data.images[0].src}" alt="">
+                   <p>${res.data.name}</p>
+                   <p>${res.data.date_created}</p>`);
+                $('.nrxq').append(p);    
+        })
+          })
+      </script>
 </body>
 </html>
