企业站第二次修改

--- a/shouye.html
+++ b/shouye.html
@@ -128,8 +128,9 @@
          height: 380px;
     }
     .footer{ 
-        width: 100%;
-        padding: 10px 100px;
+        width: 1200px;
+        padding: 20px 0;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
     }
@@ -185,13 +186,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
+            <img src="./haizeiwang.jpeg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
           <div class="carousel-item">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
+            <img src="./haizeiwang.jpeg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
           <div class="carousel-item">
-            <img src="./dianying.jpg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
+            <img src="./haizeiwang.jpeg" class="d-block w-100" alt="..." style="width: 400px;height: 600px;">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
