--- a/xiangqing.html
+++ b/xiangqing.html
@@ -62,8 +62,9 @@
          height: 380px;
     }
     .footer{ 
-        width: 100%;
-        padding: 10px 100px;
+        width: 1200px;
+        padding: 20px 0;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
     }
