--- a/xinwen.html
+++ b/xinwen.html
@@ -212,7 +212,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script>
         
-        var m = window.location.href.split("?page=")[1] || 1;
+        var m =Number(window.location.href.split("?page=")[1]) || 1;
 
         function geturl(n){
             window.location.href=`?page=${n}`
