--- a/qiyezhan/guanyuwomen.html
+++ b/qiyezhan/guanyuwomen.html
@@ -156,7 +156,7 @@
 		   <div class="zhongyou">
 			   <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
 			   <div class="xia">
-			   <h3>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</h3>
+			   <h3 class="dizhi"></h3>
 			   <h4>asdasfdfsddfgdfsgdfsgdfg</h4>
 			   <h5>231321321321321</h5>   
 			   </div>
@@ -190,9 +190,31 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"  crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
 	  <script>
-		  var map = new BMapGL.Map('container'); // 创建Map实例
-              map.centerAndZoom(new BMapGL.Point(119.17038, 26.07314), 12); // 初始化地图,设置中心点坐标和地图级别
-              map.enableScrollWheelZoom(true); // 开启鼠标滚轮缩放
+        $(document).ready(function(){
+		// 百度地图API功能
+		var map = new BMapGL.Map("container");
+		var point = new BMapGL.Point(119.17038, 26.07314);
+		map.centerAndZoom(point,12);
+		map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+		var geolocation = new BMapGL.Geolocation();
+		geolocation.getCurrentPosition(function(r){
+				if(this.getStatus() == BMAP_STATUS_SUCCESS){
+						var mk = new BMapGL.Marker(r.point);
+						map.addOverlay(mk);
+						map.panTo(r.point);
+						var point = new BMapGL.Point(r.point.lng,r.point.lat);//用所定位的经纬度查找所在地省市街道等信息
+						var gc = new BMapGL.Geocoder();
+						gc.getLocation(point, function(rs){
+							var addComp = rs.addressComponents; 
+							$('.dizhi').append(rs.address)
+						});
+				}
+				else {
+						alert('failed'+this.getStatus());
+				}
+		},{enableHighAccuracy: true})
+	})
+
 	  </script>
 </body>
 </html>
