--- a/qiyezhan/xiangqing.html
+++ b/qiyezhan/xiangqing.html
@@ -110,14 +110,15 @@
                 <a href="./guanyuwomen.html">关于我们</a>
             </div>
         </div>
-        <div class="title" style="width: 1200px;margin: 0 auto; display: flex;">
-            <div style="width: 5px; height: 40%; background-color: red;"></div>
+            <div class="title" style="background-color: #999999;width: 100%;">
+            <div style="width: 1200px;margin: 0 auto; display: flex;">
+            <div style="width: 5px; height: 26px; background-color: red;"></div>
             <div class="titlenr" style="margin-left: 20px;">
-                <h4>烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦</h4>
-                <p style="color: #666666;font-size: 12px;">456421321654</p>
+            <h4>烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦</h4>
+            <p style="color: #666666;font-size: 12px;">456421321654</p>
             </div>
+            </div> 
         </div>
-        
     </div>
     <div class="neirong">
         <div class="nrxq">
