--- a/qiyezhan/xinwen.html
+++ b/qiyezhan/xinwen.html
@@ -45,6 +45,7 @@
         display: flex;
         width: 100%;
         height: 40%;
+        background-color: #999999;
     }
     .zuo{
         height: 50%;
