按要求修改

--- a/qiyezhan/guanyuwomen.html
+++ b/qiyezhan/guanyuwomen.html
@@ -16,14 +16,14 @@
         }
     .top{
         width: 100%;
-        height: 150px;
-        background-color: #D7D7D7;
+        height: 80px;
+        background-color: #666666;
         display: flex;
         flex-direction: column;
     }
     .topnr{
         width: 1200px;
-        height: 60%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -142,10 +142,9 @@
 				<a href="./guanyuwomen.html">关于我们</a>
             </div>
         </div>
-        <div class="title" style="text-align: center;background-color: #999999;">
-            <h1>关于我们</h1>
-        </div>
-        
+    </div>
+    <div class="title" style=" display: flex;justify-content: center;align-items: center; background-color: #999999;margin-top: 40px;height: 80px;">
+        <h1>关于我们</h1>
     </div>
     <div class="neirong">
        <div class="zhong">
