--- a/qiyezhan/shouye.html
+++ b/qiyezhan/shouye.html
@@ -16,7 +16,7 @@
     .top{
         width: 100%;
         height: 50px;
-        background-color: #F2F2F2;
+        background-color: #666666;
     }
     .topnr{
         width: 1200px;
@@ -110,6 +110,13 @@
     .xwdt .xwyi{
         width: 25%;
         padding: 20px 10px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+    }
+    .xwyi:hover{
+        cursor: pointer;
+        background-color: #D7D7D7;
     }
     .xwyi img{
         width: 100%;
