--- a/qiyezhan/xiangqing.html
+++ b/qiyezhan/xiangqing.html
@@ -13,14 +13,14 @@
         }
     .top{
         width: 100%;
-        height: 150px;
-        background-color: #D7D7D7;
+        height: 80px;
+        background-color: #666666;
         display: flex;
         flex-direction: column;
     }
     .topnr{
         width: 1200px;
-        height: 60%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -110,15 +110,16 @@
                 <a href="./guanyuwomen.html">关于我们</a>
             </div>
         </div>
-            <div class="title" style="background-color: #999999;width: 100%;">
-            <div style="width: 1200px;margin: 0 auto; display: flex;">
-            <div style="width: 5px; height: 26px; background-color: red;"></div>
-            <div class="titlenr" style="margin-left: 20px;">
-            <h4>烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦</h4>
-            <p style="color: #666666;font-size: 12px;">456421321654</p>
-            </div>
-            </div> 
+        
+    </div>
+    <div class="title" style="background-color: #999999;width: 100%;margin-top: 40px;height: 80px;">
+        <div style="width: 1200px;margin: 0 auto; display: flex;">
+        <div style="width: 5px; height: 26px; background-color: red;"></div>
+        <div class="titlenr" style="margin-left: 20px;">
+        <h4>烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦烦</h4>
+        <p style="color: #666666;font-size: 12px;">456421321654</p>
         </div>
+        </div> 
     </div>
     <div class="neirong">
         <div class="nrxq">
