--- a/qiyezhan/xinwen.html
+++ b/qiyezhan/xinwen.html
@@ -13,14 +13,14 @@
         }
     .top{
         width: 100%;
-        height: 150px;
-        background-color: #D7D7D7;
+        height: 80px;
+        background-color: #666666;
         display: flex;
         flex-direction: column;
     }
     .topnr{
         width: 1200px;
-        height: 60%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -44,8 +44,9 @@
     .title{
         display: flex;
         width: 100%;
-        height: 40%;
+        height: 80px;
         background-color: #999999;
+        margin-top: 40px;
     }
     .zuo{
         height: 50%;
@@ -77,12 +78,17 @@
         height: auto;
         display: flex;
         flex-wrap: wrap;
+        margin-top: 20px;
     }
     .xwnr .yi{
         width: 50%;
         height: 25%;
         display: flex;
         padding: 10px 10px;
+    }
+    .yi:hover{
+        cursor: pointer;
+        background-color: #D7D7D7;
     }
     .xwnr .yi img{
         width: 40%;
@@ -103,7 +109,10 @@
     .pagination{
         margin-left: 40%;
     }
-
+    .pagination li a:hover{
+        cursor: pointer;
+        background-color: #666666;
+    }
     .foot{
          width: 100%;
          background-color: #D7D7D7;
@@ -158,15 +167,15 @@
                 <a href="./guanyuwomen.html">关于我们</a>
             </div>
         </div>
-        <div class="title">
-            <div class="zuo">
-            </div>
-            <div class="you">
-                <p>最新动态</p>
-                <div class="youyou">
-                    <h5>WHAT'S</h5>
-                    <h4>NEW!</h4>
-                </div>
+    </div>
+    <div class="title">
+        <div class="zuo">
+        </div>
+        <div class="you">
+            <p>最新动态</p>
+            <div class="youyou">
+                <h5>WHAT'S</h5>
+                <h4>NEW!</h4>
             </div>
         </div>
     </div>
@@ -176,11 +185,11 @@
             </div>
             <ul class="pagination">
                 <li><a onclick="jian()">&laquo;</a></li>
-                <li><a onclick="geturl(1)">1</a></li>
-                <li><a onclick="geturl(2)">2</a></li>
-                <li><a onclick="geturl(3)">3</a></li>
-                <li><a onclick="geturl(4)">4</a></li>
-                <li><a onclick="geturl(5)">5</a></li>
+                <li><a onclick="geturl(1)" class="yii">1</a></li>
+                <li><a onclick="geturl(2)" class="er">2</a></li>
+                <li><a onclick="geturl(3)" class="san">3</a></li>
+                <li><a onclick="geturl(4)" class="si">4</a></li>
+                <li><a onclick="geturl(5)" class="wu">5</a></li>
                 <li><a onclick="jia()">&raquo;</a></li>
             </ul>         
         </div> 
@@ -241,7 +250,28 @@
             window.location.href = `xiangqing.html?id=${$(this).attr('id')}`;                    
         });
         })
-        })
+        });
+        if(m == 1){
+            $('.yii').css({
+                "background-color":'red',
+            })
+        }else if(m == 2){
+            $('.er').css({
+                "background-color":'red',
+            })
+        }else if(m == 3){
+            $('.san').css({
+                "background-color":'red',
+            })
+        }else if(m == 4){
+            $('.si').css({
+                "background-color":'red',
+            })
+        }else if(m == 5){
+            $('.wu').css({
+                "background-color":'red',
+            })
+        }
         }
         function jian(){                                                                 
                 if(m>1){ 
